--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  
+  <section class="menu">
+    <!--title-->
+    <div class="title">
+      <h2>our menu</h2>
+      <div class="underline"></div>
+    </div>
+    <!--filter buttons-->
+    <!--menu items-->
+    <div class="section-center">
+      <!--single item-->
+      <article class="menu-item">
+        <img src="/menu-item.jpeg" class="photo" alt="menu item">
+        <div class="item-info">
+          <header>
+            <h4>buttermilk pancakes</h4>
+            <h4 class="price">$15</h4>
+          </header>
+          <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium voluptate quas sequi minus quae omnis dolores amet placeat nemo optio.</p>
+        </div>
+      </article>
+      <!--end of single item-->
+    </div>
+  </section>
   <script src="/js/app.js"></script>
 </body>
 </html>
